[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://textures/player_anims/player_crouch_walk_1.jpg" type="Texture" id=2]
[ext_resource path="res://textures/player_anims/player_crouch_walk_2.jpg" type="Texture" id=3]
[ext_resource path="res://textures/player_anims/player_attack.jpg" type="Texture" id=4]
[ext_resource path="res://textures/player_anims/player_crouch_attack.jpg" type="Texture" id=5]
[ext_resource path="res://textures/player_anims/player_crouch.jpg" type="Texture" id=6]
[ext_resource path="res://textures/player_anims/player_walk_2.jpg" type="Texture" id=7]
[ext_resource path="res://textures/player_anims/player_walk_3.jpg" type="Texture" id=8]
[ext_resource path="res://textures/player_anims/player_jump.jpg" type="Texture" id=9]
[ext_resource path="res://textures/player_anims/player_idle.jpg" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16.5328, 15.9143 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "crouch_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "crouch_attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 16, 32 )

[node name="Player" type="KinematicBody2D" index="0"]

position = Vector2( 200.023, 124.608 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]
jump_speed = -300
gravity = 500
run_speed = 165
walk_speed = 100

[node name="AttackArea" type="Area2D" parent="." index="0"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea" index="0"]

position = Vector2( -32, -16 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AttackTimer" type="Timer" parent="AttackArea" index="1"]

process_mode = 1
wait_time = 0.12
one_shot = false
autostart = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 2 )
animation = "idle"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="StunIdleTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.7
one_shot = true
autostart = false

[connection signal="timeout" from="AttackArea/AttackTimer" to="." method="_on_AttackTimer_timeout"]


